commit tree a076dd70bb424c7247a5345b68e29ccc421d8bcf

--- a/style.css
+++ b/style.css
@@ -3,3 +3,24 @@ body {
   height: 100%;
   margin: 0;
 }
+header{text-align: center;}
+a{padding: 10px;
+color: blue;
+}
+p{text-align: center;
+}
+#featured-property + figure{width: 800px;
+text-align: center;
+}
+image{align-items: center;}
+
+
+div{
+  text-align: center; 
+  float: left;
+  background-color: red;
+  width: 25%;
+}
+
+
+
